FIX: Added high z-index for popover to appear in front of everything

--- a/frontend/src/assets/styles/cmps/_popover.scss
+++ b/frontend/src/assets/styles/cmps/_popover.scss
@@ -6,4 +6,5 @@
   // box-shadow: $card-shadow;
   border-radius: 3px;
   width: 304px;
+  z-index: 1000;
 }
